--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-To establish a connection, press "Create Offer" and send the text string that appears in the first box to the other client. They must paste the text into their first text box, press "Answer Offer", then copy and send back the new text string that appears in their second text box. Paste that into your second text box and press "confirm answer". The position of your pink boxes will now be synchronized directly through the magic of WebRTC without any server.
+To establish a connection, press "Create Offer" and send the text string that appears in the first box to the other user. They must paste the text into their first text box, press "Answer Offer", then copy and send back the new text string that appears in their second text box. Paste that into your second text box and press "confirm answer". The position of your pink boxes will now be synchronized directly through the magic of WebRTC without a server.
 <hr>
 
 <button id="buttoncreateoffer" onclick="clickcreateoffer()">Create offer</button>
